# medialab-server

./: README.md  dev.sh  docker-compose.yml  mldev  publish.md
.devcontainer/: Dockerfile  devcontainer.json  requirements-dev.txt  run-client.sh  run-server.sh
client/: Dockerfile  pyproject.toml  requirements.txt
client/src/: __init__.py  client.py  main.py
common/: __init__.py  constants.py  models.py  pyproject.toml  setup.py  utils.py
common/common.egg-info/: PKG-INFO  requires.txt
scripts/: dev.sh
server/: Dockerfile  pyproject.toml  requirements.txt
server/app/: main.py
server/src/: __init__.py  main.py
