[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "medialab_server"
version = "0.1.0"
description = "MediaLab Server - FastAPI backend service"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.109.2",
    "uvicorn==0.27.1",
    "pydantic==2.6.1",
    "python-dotenv==1.0.1",
    "httpx==0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.0.0",
    "pytest-asyncio==0.23.5",
    "pytest-cov==4.1.0",
    "black==24.1.1",
    "pylint==3.0.3",
    "mypy==1.8.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build]
include = ["src/**/*.py"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.pylint.messages_control]
disable = ["C0111"]  # missing-docstring

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true 